--- a/templates/process.html
+++ b/templates/process.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css" />
     <style>
         body {
-            background-image: url('https://blog.dormakaba.com/tachyon/2020/04/Blog_In-Post-pictures_022.jpg?fit=1024,1024');
+            background-image: url('https://res.cloudinary.com/dvctaufba/image/upload/v1756841405/white_ckjjzi.avif');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
