--- a/templates/upload.html
+++ b/templates/upload.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
     <style>
         body {
-            background-image: url('https://www.pymnts.com/wp-content/uploads/2019/12/Biometric-Authentication-Digital-ID-Spoofing.jpg');
+            background-image: url('https://res.cloudinary.com/dvctaufba/image/upload/v1756841405/white_ckjjzi.avif');
             background-size: cover;
             background-repeat: no-repeat;
             background-position: center;
